# repo1

./: .env.example  .gitignore  PAYMENTS_SETUP.md  README.md  SECURITY_FINAL_AUDIT_PROMPT.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  server.js  tsconfig.json  tsconfig.tsbuildinfo  unified-server.mjs
backend/: .env  Cargo.toml
backend/src/: main.rs
docs/: INSTAGRAM_SETUP.md  TAWK_SETUP.md  tawk-training-data.txt
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/scripts/: clean-image-cache.mjs  generate-favicon.py
public/certificates/: README.md
public/images/: manifest.json
scripts/: download-dial-flags.js  download-language-flags.ps1  optimize-images.mjs
server/: .env.example  package-lock.json  package.json
server/src/: db.js  index.js  seed.js
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AboutPageContent.tsx  AiChatbot.tsx  AnimatedPortfolioCard.tsx  ApproachSection.tsx  AuditFormProvider.tsx  AuditFormProviderGate.tsx  AuditReportForm.tsx  BlogPageContent.tsx  BrandMarquee.tsx  CatalogueFanReveal.tsx  CatalogueFaqsContent.tsx  CataloguePageContent.tsx  CertificatesPageContent.tsx  ChatbotIcon.tsx  ChatbotTrigger.tsx  ContactPageContent.tsx  CreativeStrip.tsx  CreativeStripOrbs.tsx  CursorGlow.tsx  DeferredClient.tsx  ExpertiseSection.tsx  FloatReveal.tsx  FloatingWidgets.tsx  Footer.tsx  GTranslateWidget.tsx  HashScroll.tsx  Header.tsx  HeroCarousel.tsx  Industry360Section.tsx  InstagramFeedSection.tsx  IridescentTitle.tsx  (+29 more)
test/: unified-dispatcher.test.mjs
(+110 files in other folders)
