[package]
name = "tasmafive-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
scrypt = { version = "0.11", features = ["std"] }
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
percent-encoding = "2.3"
axum-extra = { version = "0.9", features = ["cookie"] }
cookie = "0.18"
hex = "0.4"
regex = "1.10"
dotenvy = "0.15"
